Fix CSS alignment

--- a/style.css
+++ b/style.css
@@ -53,7 +53,3 @@
     display: none;
   }
   
-  section {
-    margin: auto;
-    width: 50%;
-  }
